#
# Copyright (c) 2004-2005 The Trustees of Indiana University.
#                         All rights reserved.
# Copyright (c) 2004-2005 The Trustees of the University of Tennessee.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

include $(top_srcdir)/config/Makefile.options

SUBDIRS		= support class util threads mca rte
# JMS Temporary hack to make "make dist" work.  The directories mentioned
# here will eventually moved into SUBDIRS.
DIST_SUBDIRS = $(SUBDIRS) include 
