# -*- makefile -*-
#
# Copyright (c) 2004-2005 The Trustees of Indiana University.
#                         All rights reserved.
# Copyright (c) 2004-2005 The Trustees of the University of Tennessee.
#                         All rights reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from ompi/Makefile.am

headers += \
        class/ompi_circular_buffer_fifo.h \
        class/ompi_fifo.h \
        class/ompi_free_list.h \
        class/ompi_bitmap.h \
        class/ompi_pointer_array.h \
	class/ompi_rb_tree.h

libmpi_la_SOURCES += \
        class/ompi_bitmap.c \
        class/ompi_free_list.c \
        class/ompi_pointer_array.c \
	class/ompi_rb_tree.c

