# -*- makefile -*-
#
# Copyright (c) 2004-2005 The Trustees of Indiana University.
#                         All rights reserved.
# Copyright (c) 2004-2005 The Trustees of the University of Tennessee.
#                         All rights reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from ompi/Makefile.am

headers += \
	datatype/datatype.h \
	datatype/datatype_internal.h \
	datatype/dt_arch.h \
	datatype/convertor.h

libmpi_la_SOURCES += \
	datatype/dt_add.c \
	datatype/dt_create.c \
	datatype/dt_create_array.c \
	datatype/dt_create_dup.c \
	datatype/dt_create_indexed.c \
	datatype/dt_create_struct.c \
	datatype/dt_create_vector.c \
	datatype/dt_destroy.c \
	datatype/dt_module.c \
	datatype/dt_optimize.c \
	datatype/dt_pack.c \
	datatype/dt_sndrcv.c \
	datatype/dt_unpack.c \
	datatype/fake_stack.c \
	datatype/dt_args.c \
	datatype/dt_arch.c \
	datatype/dt_external32.c \
	datatype/dt_match_size.c \
	datatype/convertor.c \
	datatype/new_pack.c \
	datatype/new_unpack.c
