# -*- makefile -*-
#
# Copyright (c) 2015-2020 Intel, Inc.  All rights reserved.
# Copyright (c) 2016      IBM Corporation.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from ompi/Makefile.am

dist_ompidata_DATA += dpm/help-dpm.txt

headers += \
        dpm/dpm.h

lib@OMPI_LIBMPI_NAME@_la_SOURCES += \
        dpm/dpm.c

